--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,24 @@
 #set -g default-terminal "xterm"
+# Automatically set window title
+set-window-option -g automatic-rename on
+set-option -g set-titles on
+
+# Vim style pane selection
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# Vim syle window split
+bind-key v split-window -h
+bind-key s split-window -v
+
+# Resize panes
+bind-key J resize-pane -D 5
+bind-key K resize-pane -U 5
+bind-key H resize-pane -L 5
+bind-key L resize-pane -R 5
+
 #-------------------------------------------------------#
 #Pane colors
 #-------------------------------------------------------#
@@ -16,4 +36,7 @@
 #setw -g mouse-select-pane on
 #setw -g mouse-resize-pane on
 #setw -g mouse-select-window on
+
+# Reload tmux config
+bind r source-file ~/.tmux.conf
 
