--- a/.gitmodules
+++ b/.gitmodules
@@ -34,6 +34,6 @@
 [submodule ".vim/bundle/command-t"]
   path = .vim/bundle/command-t
   url = https://github.com/wincent/command-t.git
-[submodule ".vim/bundle/vim-colors-solarized"]
-  path = .vim/bundle/vim-colors-solarized
-  url = https://github.com/altercation/vim-colors-solarized.git
+[submodule "vim-colors-solarized"]
+  path = vim-colors-solarized
+  url = git://github.com/altercation/vim-colors-solarized.git
