--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,10 +32,8 @@ bind-key L resize-pane -R 5
 #set -g pane-active-border-fg colour51
 #-------------------------------------------------------#
 #enable mouse integretion
-#setw -g mode-mouse on
-#setw -g mouse-select-pane on
-#setw -g mouse-resize-pane on
-#setw -g mouse-select-window on
+set -g mode-mouse on
+set -g default-terminal "screen-256color"
 
 # Reload tmux config
 bind r source-file ~/.tmux.conf
