--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,9 +32,14 @@ bind-key L resize-pane -R 5
 #set -g pane-active-border-fg colour51
 #-------------------------------------------------------#
 #enable mouse integretion
-set -g mode-mouse on
+set -g mouse on
 set -g default-terminal "screen-256color"
 
 # Reload tmux config
 bind r source-file ~/.tmux.conf
+
+# Add tmux continum support
+run-shell ~/.tmux/bundle/tmux-resurrect/resurrect.tmux
+set -g @resurrect-dir '~/.tmux/resurrect'
+run-shell ~/.tmux/bundle/tmux-continuum/continuum.tmux
 
