fix highlight bux, switch to gruvbox theme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,4 +42,6 @@ bind r source-file ~/.tmux.conf
 run-shell ~/.tmux/bundle/tmux-resurrect/resurrect.tmux
 set -g @resurrect-dir '~/.tmux/resurrect'
 run-shell ~/.tmux/bundle/tmux-continuum/continuum.tmux
+#auto start tmux with continuum when linux starts
+set -g @continuum-boot 'on'
 
